--- a/app/src/main/res/layout/content_feedback_positive_landing.xml
+++ b/app/src/main/res/layout/content_feedback_positive_landing.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Awesome to hear!"
+            android:text="@string/awesomeToHear"
             android:textAlignment="center"
             android:textColor="@color/almostBlackDark"
             android:textSize="22sp"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif"
-            android:text="Please share the love by rating on the Play Store"
+            android:text="@string/shareTheLoveWithARating"
             android:textAlignment="center"
             android:textColor="@color/almostBlack"
             android:textSize="15sp"
@@ -73,7 +73,7 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/button_contained_bg"
             android:foreground="?attr/selectableItemBackground"
-            android:text="RATE THE APP"
+            android:text="@string/rateTheApp"
             android:textColor="@color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/report_broken_site_button_outlined_bg"
             android:foreground="?attr/selectableItemBackground"
-            android:text="SHARE FEEDBACK"
+            android:text="@string/feedbackShareDetails"
             android:textColor="@color/cornflowerBlue"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +106,7 @@
             android:layout_marginTop="18dp"
             android:layout_marginEnd="20dp"
             android:background="@null"
-            android:text="NO THANKS, I'M DONE"
+            android:text="@string/declineFurtherFeedback"
             android:textColor="@color/cornflowerBlue"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
