--- a/app/src/main/res/layout/content_feedback_negative_broken_site_feedback.xml
+++ b/app/src/main/res/layout/content_feedback_negative_broken_site_feedback.xml
@@ -18,7 +18,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toots="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -42,13 +42,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="sans-serif-medium"
+            android:text="@string/websiteNotLoadingTitleShort"
             android:textAlignment="center"
             android:textColor="@color/almostBlackDark"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/emoticonImage"
-            tools:text="Issue title shortform" />
+            app:layout_constraintTop_toBottomOf="@id/emoticonImage" />
 
         <TextView
             android:id="@+id/subtitle"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif"
-            tools:text="Which feature can we improve or add?"
+            android:text="@string/whichBrokenSites"
             android:textAlignment="center"
             android:textColor="@color/almostBlack"
             android:textSize="15sp"
@@ -66,18 +66,48 @@
             app:layout_constraintWidth_percent="0.66" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/brokenSiteInputContainer"
+            style="@style/FeedbackInputBoxStyle"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginEnd="20dp"
+            android:hint="@string/whichBrokenSitesHint"
+            app:hintTextAppearance="@style/FeedbackInputHintStyle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/subtitle">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/brokenSiteInput"
+                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:imeOptions="flagNoExtractUi"
+                android:importantForAutofill="no"
+                android:inputType="textUri"
+                android:paddingBottom="20dp"
+                android:textColor="@color/greyishBrownTwo"
+                android:textSize="14sp"
+                toots:text="https://example.com" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/openEndedFeedbackContainer"
             style="@style/FeedbackInputBoxStyle"
             android:layout_width="0dp"
             android:layout_height="140dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="20dp"
             android:hint="@string/openEndedInputHint"
             app:hintTextAppearance="@style/FeedbackInputHintStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/subtitle">
+            app:layout_constraintTop_toBottomOf="@id/brokenSiteInputContainer">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/openEndedFeedback"
@@ -85,6 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
+                android:nextFocusDown="@string/submitFeedback"
                 android:gravity="top"
                 android:imeOptions="flagNoExtractUi"
                 android:importantForAutofill="no"
@@ -101,17 +132,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/button_contained_bg"
             android:foreground="?attr/selectableItemBackground"
             android:text="@string/submitFeedback"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/openEndedFeedbackContainer" />
+            app:layout_constraintTop_toBottomOf="@id/openEndedFeedbackContainer"
+            app:layout_constraintVertical_bias="0.9" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
