--- a/app/src/main/res/values/strings-feedback-disambiguation.xml
+++ b/app/src/main/res/values/strings-feedback-disambiguation.xml
@@ -80,6 +80,9 @@
     <string name="shareTheLoveWithARating">Please share the love by rating on the Play Store</string>
     <string name="rateTheApp">RATE THE APP</string>
     <string name="declineFurtherFeedback">NO THANKS, I\'M DONE</string>
+    <string name="whichBrokenSites">Where are you seeing these issues?</string>
+    <string name="whichBrokenSitesHint">Which website has issues?</string>
+    <string name="feedbackSpecificAsPossible">Please be as specific as possible</string>
 
 
 </resources>
