--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -257,4 +257,10 @@
 
     </style>
 
+    <style name="FeedbackListSeparator">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@drawable/feedback_list_divider</item>
+    </style>
+
 </resources>
