--- a/app/src/main/res/layout/content_feedback.xml
+++ b/app/src/main/res/layout/content_feedback.xml
@@ -26,28 +26,16 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/feedbackTitleMarginTop"
-            android:fontFamily="sans-serif-medium"
-            android:text="Let's get started!"
-            android:textColor="@color/almostBlackDark"
-            android:textSize="22sp"
+            style="@style/FeedbackTitle.FeedbackHappySadDisambiguationTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/feedbackInitialDisambiguationTitle"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="9dp"
-            android:layout_marginEnd="38dp"
-            android:fontFamily="sans-serif"
-            android:text="How would you categorize your feedback?"
-            android:textColor="@color/almostBlack"
-            android:textSize="15sp"
+            style="@style/FeedbackTitle.FeedbackSubtitle.FeedbackHappySadDisambiguationSubtitle"
+            android:text="@string/feedbackInitialDisambiguationSubtitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
@@ -59,7 +47,7 @@
             android:layout_marginTop="34dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
-            android:contentDescription="Positive feedback button"
+            android:contentDescription="@string/feedbackInitialDisambiguationHappyButtonContentDescription"
             android:focusable="true"
             android:src="@drawable/ic_positive_feedback_button"
             app:layout_constraintEnd_toStartOf="@id/negativeFeedbackButton"
@@ -72,8 +60,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-
-            android:contentDescription="Negative feedback button"
+            android:contentDescription="@string/feedbackInitialDisambiguationSadButtonContentDescription"
             android:src="@drawable/ic_negative_feedback_button"
             app:layout_constraintBottom_toBottomOf="@id/positiveFeedbackButton"
             app:layout_constraintEnd_toEndOf="parent"
@@ -85,8 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="26dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Your anonymous feedback is important to us"
-            android:textColor="@color/warmerGray"
+            android:text="@string/feedbackIsImportantToUs"
+            android:textColor="?attr/feedbackAnonymousFeedbackLabelColor"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
