--- a/app/src/main/res/layout/content_feedback_negative_broken_site_feedback.xml
+++ b/app/src/main/res/layout/content_feedback_negative_broken_site_feedback.xml
@@ -38,32 +38,20 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/FeedbackTitle"
             android:layout_marginTop="12dp"
-            android:fontFamily="sans-serif-medium"
             android:text="@string/websiteNotLoadingTitleShort"
-            android:textAlignment="center"
-            android:textColor="@color/almostBlackDark"
-            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emoticonImage" />
 
         <TextView
             android:id="@+id/subtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif"
+            style="@style/FeedbackTitle.FeedbackSubtitle"
             android:text="@string/whichBrokenSites"
-            android:textAlignment="center"
-            android:textColor="@color/almostBlack"
-            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintWidth_percent="0.66" />
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/brokenSiteInputContainer"
@@ -81,16 +69,10 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/brokenSiteInput"
-                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                style="@style/FeedbackEditTextInputStyle"
                 android:gravity="center_vertical"
-                android:imeOptions="flagNoExtractUi"
-                android:importantForAutofill="no"
-                android:inputType="textUri"
+                android:inputType="textUri|textNoSuggestions"
                 android:paddingBottom="20dp"
-                android:textColor="@color/greyishBrownTwo"
-                android:textSize="14sp"
                 toots:text="https://example.com" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -111,17 +93,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/openEndedFeedback"
-                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:nextFocusDown="@string/submitFeedback"
-                android:gravity="top"
-                android:imeOptions="flagNoExtractUi"
-                android:importantForAutofill="no"
-                android:inputType="textLongMessage|textMultiLine"
-                android:textColor="@color/greyishBrownTwo"
-                android:textSize="14sp" />
+                style="@style/FeedbackEditTextInputStyle"
+                android:nextFocusDown="@string/submitFeedback" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
