--- a/app/src/main/res/layout/content_feedback_negative_disambiguation_main_reason.xml
+++ b/app/src/main/res/layout/content_feedback_negative_disambiguation_main_reason.xml
@@ -37,32 +37,20 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="sans-serif-medium"
+            style="@style/FeedbackTitle"
             android:text="@string/feedbackNegativeMainReasonPageTitle"
-            android:textAlignment="center"
-            android:textColor="@color/almostBlackDark"
-            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emoticonImage" />
 
         <TextView
             android:id="@+id/subtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/FeedbackTitle.FeedbackSubtitle"
             android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif"
             android:text="@string/feedbackNegativeMainReasonPageSubtitle"
-            android:textAlignment="center"
-            android:textColor="@color/almostBlack"
-            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintWidth_percent="0.66" />
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
